[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
const_format = "0.2.32"
nom = "7.1.3"
thiserror = "1.0.63"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
todo = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
clone-on-ref-ptr = "deny"
